@@ -1,3 +1,9 @@
+2006-09-02  Tor Lillqvist  <tml@novell.com>
+
+	* glib/gutils.c (g_get_any_init_do): Correct C99ism (mixed
+	declarations and code) in Win32 ifdef branch. (#353903, Mike
+	Edenfield)
+
 2006-09-01  Abel Cheung  <abel@oaka.org>
 
 	* configure.in: Added 'dz' 'hy' to ALL_LINGUAS.
